--- a/style.css
+++ b/style.css
@@ -2,13 +2,41 @@ body {
     font-family: sans-serif;
 }
 
-ul {
-    font-size: 24px;
+h1 {
+    font-size: 50px;
+    color: rgb(136, 57, 226);
     text-align: center;
-    background-color: aqua;
 }
 
-h1 {
-    font-size: 80px;
-    color: rgb(136, 57, 226);
+ul {
+    background-color: rgb(93, 93, 93);
+    padding: 20px;
+}
+
+li {
+    padding: 20px;
+}
+
+.list {
+    background-color: rgb(211, 213, 213);
+    padding: 40px;
+    text-align: center;
+    margin: 0 auto;
+    max-width: 50%;
+}
+
+#list-one {
+    margin: 20px;
+    background-color: rgb(188, 233, 40);
+    
+}
+
+#list-two {
+    margin: 20px;
+    background-color: rgb(100, 212, 86);
+}
+
+#list-three {
+    margin: 20px;
+    background-color: rgb(131, 36, 221);
 }
